# packages/api/src/database/entities/session.entity.ts
@@ -18,6 +18,7 @@ export class SessionEntity extends BaseEntity {
     eventChunkCount: number = 0;
     eventBytesStored: number = 0;
     hasChatMessages: boolean = false;
+    previousSessionId?: string & Index;
     createdAt!: Date;
     updatedAt!: Date;
 }
